--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
         <item>Hiking</item>
         <item>Cricket</item>
         <item>Volleyball</item>
-        <item>Gold</item>
+        <item>Golf</item>
         <item>Rugby</item>
         <item>Hockey</item>
         <item>Football</item>
